syntax = "proto3";

option csharp_namespace = "Lemvik.Example.Chat.Protocol.Protobuf";

message ChatRoom {
  string id = 1;
  string name = 2;
}

message ChatUser {
  string user_id = 1;
  string user_name = 2;
}

message ListRoomsRequest {}

message ListRoomsResponse {
  repeated ChatRoom rooms = 1;
}

message HandshakeRequest {
  ChatUser user = 1;
}

message HandshakeResponse {
}

message CreateRoomRequest {
  string room_name = 1;
}

message CreateRoomResponse {
  ChatRoom room = 1;
}

message JoinRoomRequest {
  string room_id = 1;
}

message JoinRoomResponse {
  ChatRoom room = 1;
  repeated UserMessage messages = 2;
}

message LeaveRoomRequest {
  ChatRoom room = 1;
}

message LeaveRoomResponse {
  ChatRoom room = 1;
}

message UserMessage {
  ChatUser user = 1;
  ChatRoom room = 2;
  string message = 3;
}

message ProtocolExchange {
  uint64 exchange_id = 1;
  oneof message {
    CreateRoomRequest create_room_request = 2;
    CreateRoomResponse create_room_response = 3;
    ListRoomsRequest list_room_request = 4;
    ListRoomsResponse list_room_response = 5;
    JoinRoomRequest join_room_request = 6;
    JoinRoomResponse join_room_response = 7;
    LeaveRoomRequest leave_room_request = 8;
    LeaveRoomResponse leave_room_response = 9;
  }
}

message ProtocolMessage {
  oneof message {
    ProtocolExchange exchange_message = 1;
    UserMessage userMessage = 2;
    HandshakeRequest handshakeRequest = 3;
    HandshakeResponse handshakeResponse = 4;
  }
}
